err/cocy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Tenjin-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/circuits'...
Listing './lib/python3.5/site-packages/circuits/app'...
Listing './lib/python3.5/site-packages/circuits/core'...
Listing './lib/python3.5/site-packages/circuits/io'...
Listing './lib/python3.5/site-packages/circuits/net'...
Listing './lib/python3.5/site-packages/circuits/net/protocols'...
Listing './lib/python3.5/site-packages/circuits/node'...
Listing './lib/python3.5/site-packages/circuits/tools'...
Listing './lib/python3.5/site-packages/circuits/web'...
Listing './lib/python3.5/site-packages/circuits/web/apps'...
Listing './lib/python3.5/site-packages/circuits/web/apps/memorymonitor'...
Compiling './lib/python3.5/site-packages/circuits/web/apps/memorymonitor/reftree.py'...
***   File "./lib/python3.5/site-packages/circuits/web/apps/memorymonitor/reftree.py", line 178
    print trail
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/circuits/web/apps/webconsole'...
Compiling './lib/python3.5/site-packages/circuits/web/apps/webconsole/__init__.py'...
***   File "./lib/python3.5/site-packages/circuits/web/apps/webconsole/__init__.py", line 61
    exec code in self.locals
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/circuits/web/dispatchers'...
Listing './lib/python3.5/site-packages/circuits-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/circuits_bricks'...
Listing './lib/python3.5/site-packages/circuits_bricks/app'...
Listing './lib/python3.5/site-packages/circuits_bricks/core'...
Listing './lib/python3.5/site-packages/circuits_bricks/misc'...
Listing './lib/python3.5/site-packages/circuits_bricks/net'...
Listing './lib/python3.5/site-packages/circuits_bricks/net/protocols'...
Listing './lib/python3.5/site-packages/circuits_bricks/web'...
Listing './lib/python3.5/site-packages/circuits_bricks/web/dispatchers'...
Listing './lib/python3.5/site-packages/circuits_bricks-0.3.egg-info'...
Listing './lib/python3.5/site-packages/cocy'...
Listing './lib/python3.5/site-packages/cocy/core'...
Listing './lib/python3.5/site-packages/cocy/portlets'...
Listing './lib/python3.5/site-packages/cocy/portlets/templates'...
Listing './lib/python3.5/site-packages/cocy/portlets/templates/themes'...
Listing './lib/python3.5/site-packages/cocy/portlets/templates/themes/default'...
Compiling './lib/python3.5/site-packages/cocy/soap.py'...
***   File "./lib/python3.5/site-packages/cocy/soap.py", line 72
    print node
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cocy/soaplib'...
Listing './lib/python3.5/site-packages/cocy/soaplib/serializers'...
Compiling './lib/python3.5/site-packages/cocy/soaplib/serializers/clazz.py'...
***   File "./lib/python3.5/site-packages/cocy/soaplib/serializers/clazz.py", line 63
    print extends
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cocy/soaplib/serializers/primitive.py'...
***   File "./lib/python3.5/site-packages/cocy/soaplib/serializers/primitive.py", line 233
    tz_hr, tz_min = [int(match.group(x)) for x in "tz_hr", "tz_min"]
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cocy/soaplib/service.py'...
***   File "./lib/python3.5/site-packages/cocy/soaplib/service.py", line 64
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cocy/soaplib/soap.py'...
***   File "./lib/python3.5/site-packages/cocy/soaplib/soap.py", line 82
    except ValueError,e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cocy/soaplib/test'...
Compiling './lib/python3.5/site-packages/cocy/soaplib/test/test_service.py'...
***   File "./lib/python3.5/site-packages/cocy/soaplib/test/test_service.py", line 154
    print etree.tostring(sent_xml, pretty_print=True)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cocy/soaplib/util'...
Compiling './lib/python3.5/site-packages/cocy/soaplib/wsgi.py'...
***   File "./lib/python3.5/site-packages/cocy/soaplib/wsgi.py", line 344
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cocy/upnp'...
Listing './lib/python3.5/site-packages/cocy/upnp/adapters'...
Listing './lib/python3.5/site-packages/cocy/upnp/services'...
Compiling './lib/python3.5/site-packages/cocy/upnp/soap.py'...
***   File "./lib/python3.5/site-packages/cocy/upnp/soap.py", line 72
    print node
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cocy/upnp/templates'...
Listing './lib/python3.5/site-packages/cocy-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rbtranslations-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/sampleapps'...
Listing './lib/python3.5/site-packages/sampleapps/binary_light'...
Compiling './lib/python3.5/site-packages/sampleapps/binary_light/server.py'...
***   File "./lib/python3.5/site-packages/sampleapps/binary_light/server.py", line 74
    print graph(application)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sampleapps/media_renderer'...
Compiling './lib/python3.5/site-packages/sampleapps/media_renderer/server.py'...
***   File "./lib/python3.5/site-packages/sampleapps/media_renderer/server.py", line 69
    print graph(application)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/app'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/io'...
Listing './lib/python3.5/site-packages/tests/net'...
Listing './lib/python3.5/site-packages/tests/net/protocols'...
Listing './lib/python3.5/site-packages/tests/tools'...
Listing './lib/python3.5/site-packages/tests/web'...
Listing './share'...
Listing './share/python-wheels'...
